# mankai-smart-grouping

./: .gitignore  LICENSE  README.md  benchmark_results.json  merged_benchmark_results.json  pyproject.toml  siamese_benchmark_results.json
benchmark/benchmark/: BenchmarkConfig.swift  BenchmarkRunner.swift  ContentView.swift  DirectoryPicker.swift  ImagePatchGenerator.swift  ModelRunner.swift  ResultsView.swift  benchmarkApp.swift
benchmark/benchmark.xcodeproj/: project.pbxproj
models/: metrics.json
models/merged/: metrics.json
models/merged/model.mlpackage/: Manifest.json
models/merged/model.mlpackage/Data/com.apple.CoreML/: model.mlmodel
models/merged/model_optimized.mlpackage/: Manifest.json
models/merged/model_optimized.mlpackage/Data/com.apple.CoreML/: model.mlmodel
models/model.mlpackage/: Manifest.json
models/model.mlpackage/Data/com.apple.CoreML/: model.mlmodel
models/model_optimized.mlpackage/: Manifest.json
models/model_optimized.mlpackage/Data/com.apple.CoreML/: model.mlmodel
models/siamese/: metrics.json
models/siamese/model.mlpackage/: Manifest.json
models/siamese/model_optimized.mlpackage/: Manifest.json
models/siamese/model_optimized.mlpackage/Data/com.apple.CoreML/: model.mlmodel
scripts/: benchmark.py  convert_to_mlpackage.py  generate_dataset.py  merge_benchmark_results.py
src/: merged_classifier.py  siamese_network.py
