[project]
name = "mankai-smart-grouping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "coremltools>=9.0",
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "pillow>=10.4.0",
    "timm>=1.0.24",
    "torch>=2.5.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
